[project]
name = "py-random-dot-org"
version = "1.0.1"
authors = [{name = "Nick Seinsche", email = "nick.seinsche@gmail.com"}]
description = "Random.org Api Wrapped in Python"
license = {file = "LICENSE.txt"}
readme = "README.rst"
keywords = ["random", "api", "wrapper"]
requires-python = ">=3.11"
dependencies = [
    "requests"
]

[pyproject-optional-depenencies]
dev = [
    "build",
    "pytest"
]
readthedocs = ["sphinx"]

[project.urls]
Repository = "https://github.com/Nick-Seinsche/py_random_dot_org"

[tool.setuptools.packages.find]
where = ['.']
include = ['py_random_dot_org']
exclude = ['venv', 'tests']

[tool.black]
extend_exclude = '/(\.venv.*)/'
line-length = 88

[build-system]
requires = [
    "setuptools >= 40.9.0"
]
build-backend = "setuptools.build_meta"

# pyproject.toml
[tool.pytest.ini_options]
pythonpath = [".", "py_random_dot_org"]